--- a/main.css
+++ b/main.css
@@ -1,16 +1,68 @@
 
-
-/* Title div */
-.title {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-} 
-
-.title img {
-    scale: 50% 50%; 
+html {
+    height: 100%;
 }
 
-.title div {
-    
+body {
+    height: 100%;
+    background-size: cover;
+    background-color: rgba(234, 234, 234, 0.5);
+    background-image: linear-gradient(140deg, rgba(234, 243, 234, 0.7) 20%, rgba(0, 0, 0, 0.3));
+    font-family: 'Roboto', sans-serif;
+    overflow-y:hidden;
+}
+
+button {
+    text-decoration: none;
+    padding : 5%;
+    background-color: rgba(38, 199, 211, 0.3);
+    border: none;
+    cursor: pointer;
+    outline: none; 
+    text-decoration:none;
+    border-radius: 2%;
+    padding: 0;
+    font-size: 2em;
+}
+
+.title {
+    height: 100%; 
+    width: 100%; 
+    display: flex;
+    flex-direction: column; 
+    justify-content: start;
+    align-items: center;
+    margin: auto auto;
+}
+
+.logo {
+    height: auto;
+    width: 40%;
+    margin: auto auto;
+}
+ 
+.btn-order{
+    width: 40%;
+    height: auto;
+    margin: auto auto;
+    font-size: 4em;
+}
+
+button:hover{
+    background-color: rgba(27, 58, 88, 0.3);
+    transition-duration: 0.166s;
+    transition-delay: 0.1s;
+}
+
+button:active{
+    background-color: rgba(27, 58, 88, .6);
+    border: none;
+}
+
+.login {
+    left: 95%;
+    top: 0%;
+    position: absolute;
+    margin: auto auto;
+    z-index: 1;
 }
