--- a/main.css
+++ b/main.css
@@ -98,27 +98,21 @@ button:active{
     height: 100%;
     width: 100%;
     display: flex;
-    justify-content: flex-start;
     flex-direction: row;
-    margin: 0;
-    padding: 0;
 }
 
 .sidebar {
     background-color : white;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
     text-align: center;
     height: 100%;
-    width: 10%;
+    width: 13%;
 }
 
 
 /*-----------------------------Menu Items-----------------------------*/
-
-
-
 .btn-customize {
     font-size: 1rem;
     padding: 0.3rem;
@@ -131,35 +125,25 @@ button:active{
     grid-area: add;
 }
 
-
-
-
-
 .category {
-    width: 100%;
-    margin: auto;
+    display: inline-block;
+    width: 90%;
+    opacity: 0.6;
 }
-
 
 .category img {
     width: 100%;
     height: auto;
 }
 
-.icon { 
-    opacity: 0.6;
-}
-.icon:hover{
+.category:hover{
     opacity: 1;
 }
-
-
 
 .items {
     background-color: white;
     width: 100%;
 }
-
 
 .item-even {
     background-color: rgb(128, 128, 128);
@@ -167,6 +151,7 @@ button:active{
     width: 100%;
     float: left;
 }
+
 .item-odd {
     background-color: rgb(74, 74, 74);
     height: 20%;
@@ -232,34 +217,23 @@ button:active{
 /* ----------------------------- Login ---------------------------*/
 
 .login {
-    left: 94.5%;
-    top: 1%;
-    position: absolute;
-    margin: auto auto;
-    height: auto;
-    width: 5%;
-    color: #084166;
+    color: rgb(70, 70, 70);
     font-size: 5rem;
-}
-
-.btn-login {
-    height: 100%;
     width: 100%;
+    opacity: 0.6;
+    height: auto;
 }
 
 /* ----------------------------- Cart ---------------------------*/
 .cart {
-    left: 93%;
-    top: 86%;
-    position: absolute;
-    margin: auto auto;
+    margin-top: auto;
+    width: 100%;
     height: auto;
-    width: 5%;
-    color: #084166;
+    color: rgb(70, 70, 70);
+    opacity: 0.6;
     font-size: 5rem;
 }
 
-.btn-cart {
-    height: 100%;
-    width: 100%;
+.cart:hover, .login:hover{
+    opacity: 1;
 }
