--- a/main.css
+++ b/main.css
@@ -93,8 +93,8 @@ button:active{
     grid-column-gap: 4px;
     grid-row-gap: 4px;
     grid-template-areas:
-        'pic title cust  add  '
-        'pic types cals  cost ';
+        'pic title cals  cost  '
+        'pic types cust  add ';
     width: 100%;
     height: 100%;
 }
@@ -151,14 +151,15 @@ button:active{
 }
 
 .item-even {
-    background-color: rgb(128, 128, 128);
+    background-color: rgb(210, 210, 210);
+
     height: 20%;
     width: 100%;
     float: left;
 }
 
 .item-odd {
-    background-color: rgb(74, 74, 74);
+    background-color: rgb(230, 230, 230);
     height: 20%;
     width: 100%;
     float: left;
