--- a/main.css
+++ b/main.css
@@ -106,17 +106,42 @@ button:active{
     height:100%
 
 }
-
 .menu-row {
     display: flex;
     width: 100%;
-    height: 20%;
+    height: auto;
+    min-height:20%;
     background-color:white;
 }
-.food-item {
-    width: 10%;
-    height: auto
+
+.row-text {
+    font-family: 'Open Sans', sans-serif;
+    flex-direction: column;
+    align-items: center;
 }
+
+
+.food-item {
+    width: 13%;
+    height: auto;
+}
+
+.food-groups {
+    display:flex; 
+    flex-direction: row;
+    margin-top: -15px;
+    width: 6%;
+    height: auto;
+    justify-content: space-between;
+}
+
+.food-group-item{
+    width: 50%;
+}
+.calorie {
+    margin-top: -5px;
+}
+
 .container{
     height: 100%;
     width: 100%;
@@ -130,7 +155,7 @@ button:active{
     flex-direction: column;
     justify-content: space-around;
     text-align: center;
-    height: 100%;
+    height: auto;
     width: 13%;
 }
 
