--- a/main.css
+++ b/main.css
@@ -349,7 +349,7 @@ input[type=text], input[type=password] {
   }
 
   /* The Close Button (x) */
-  .clos
+  .close {
     right: 5%;
     top: 0;
     color: #000;
