--- a/main.css
+++ b/main.css
@@ -90,6 +90,8 @@ button:active{
 }
 
 .menu-container {
+    width: 100%;
+    height:100%;
     display: flex;
     flex-direction: column;
     overflow-y: scroll; 
