--- a/main.css
+++ b/main.css
@@ -5,8 +5,7 @@ html, body {
     padding: 0;
     margin: 0;
     background-size: cover;
-    background-color: rgba(255, 255, 255, 1);
-    background-image: linear-gradient(140deg, rgba(234, 243, 234, 0.7) 0%, rgba(0, 0, 0, 0.4)); 
+    background-color: rgba(128, 128, 128, 1);
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -19,7 +18,8 @@ button {
     font-weight: bold;
     text-decoration: none;
     padding:0;
-    background-color: rgba(0, 84, 166, 1);
+    /* background-color: rgba(0, 84, 166, 1); */
+    background-color: rgba(24, 24, 24, 1);
     border: none;
     cursor: pointer;
     outline: none;
@@ -208,7 +208,7 @@ button:active{
     flex-direction: row;
 }
 
-.sidebar {
+.sidebar {rgb()33,33_,33
     background-color: rgb(27, 24, 24);
     display: flex;
     flex-direction: column;
@@ -259,11 +259,11 @@ button:active{
 .category img {
     width: 100%;
     height: 100%;
-}
 
 .category.selected {
     opacity:1;
     background-color: rgba(0,84,166,0.4);
+}   background-color: rgba(0,84,166,0.4);
 }
 
 .category:hover{
@@ -273,7 +273,7 @@ button:active{
 
 /* ----------------------------- Login ---------------------------*/
 
-.login {
+.login {1515157707
     color: white;
     font-size: 5rem;
     width: 100%;
@@ -374,4 +374,14 @@ input[type=text], input[type=password] {
     width: auto;
     padding: 10px 18px;
     background-color: rgb(70, 70, 70);
+}
+
+/* Checkout*/
+
+
+.checkout-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
 }
