--- a/main.css
+++ b/main.css
@@ -375,13 +375,29 @@ input[type=text], input[type=password] {
     padding: 10px 18px;
     background-color: rgb(70, 70, 70);
 }
-
+/* */
+    
 /* Checkout*/
 
 
 .checkout-container {
     display: flex;
-    flex-direction: column;
     height: 100%;
     width: 100%;
+    flex-direction: column;
+    height: 100%;
+}
+
+.Cart {
+    height: 80%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.Totals {
+    height: 30%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
 }
