--- a/main.css
+++ b/main.css
@@ -43,6 +43,8 @@ button:active{
 /*-----------------------------Start Screen-----------------------------*/
 .icon {
     cursor: pointer;
+    background-image: url('Assets/Images/Burger_old.jpg');
+    background-size: cover;
 }
 
 .title {
@@ -53,8 +55,8 @@ button:active{
     justify-content: start;
     justify-items: center;
     margin: auto auto;
-    background-image: url('Assets/Images/Burger_old.jpg');
     background-size: cover;
+    background-image: url('Assets/Images/Burger_old.jpg');
 }
 
 .logo {
@@ -214,7 +216,7 @@ button:active{
 }
 
 .sidebar {
-    background-color: rgb(27, 24, 24);
+    background-color: rgb(41, 41, 41);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -322,10 +324,12 @@ button:active{
 }
 
 .cart-counter{
-    background-color: red;
-    color: white;
-    margin-top: 350%;
-    margin-left: 30px;
+    color: black;
+    font-size:.5em;
+    position:absolute;
+    bottom: 0.8%;
+    right:3%;
+    z-index:2;    
 }
 /* ----------------------------- Cart ---------------------------*/
 .cart{
@@ -408,8 +412,6 @@ input[type=text], input[type=password] {
     padding-top:10px;
     height:10%;
     width:100%;
-    background-image: url('Assets/Images/Burger_old.jpg');
-    background-size: cover;
     background-color: rgb(60,60,60);
     color:white;
     text-align: center;
@@ -446,35 +448,44 @@ input[type=text], input[type=password] {
 .cart-item-container {
     display: flex;
     flex-direction: row;
-    width: 100%;
-    height: 20%;
+    width: 70%;
+    height: 100%; 
+    /* NOT THIS ONE */
+    
 }
 
 .cart-item-title {
     align-self: center;
     font-size: 2rem;
+    color: white;
     padding: 2%;
 }
 .cart-item-cals {
     align-self: center;
     font-size: 2rem;
+    color: white;
     padding: 2%;
 }
 .cart-item-quantity {
+    right:100px;
     align-self: center;
     font-size: 2rem;
-    padding: 2%;
+    color: white;
 }
+
 .cart-item-cost {
     align-self: center;
     font-size: 2rem;
+    color: white;
     padding: 2%;
 }
 
 .cart-item-img {
     display: inline-block;
-    width: 150px;
-    height: auto;
+    width: 128px;
+    height: 128px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .total-text{
@@ -497,4 +508,43 @@ input[type=text], input[type=password] {
     opacity: 0.6;
     height: auto;
     text-align: center;
+}
+
+.cart-item-minus{
+    margin: auto;
+    height:100px;
+    width:100px;
+    opacity: 0.6;
+}
+.cart-item-plus{
+    margin: auto;
+    height:100px;
+    width:100px;
+    opacity:0.6;
+}
+.cart-item-plus:hover,.cart-item-minus:hover{
+    opacity:1;
+}
+.item-quantity-div{
+    display:flex;
+    flex-direction:row;
+    justify-content: space-around;
+    width:30%;
+    height:100%;
+}
+
+.cart-row {
+    display:flex;
+    flex-direction:row;
+    width:100%;
+    height:auto;
+}
+.cart-row.odd{
+
+    background-color: rgb(70,70,70);
+}
+
+.cart-row.even{
+
+    background-color: rgb(48,48,48);
 }
